# Plantique

./: .gitignore  docker-compose.yml
Backend/: Dockerfile  alembic.ini  postgres_entrypoint.sh  pyproject.toml  requirements.txt
Backend/FastAPI/: main.py  plantique_app.db  services.py
Backend/FastAPI/api_v1/: __init__.py  relation_schemas.py
Backend/FastAPI/api_v1/carts/: crud.py  (+3 more)
Backend/FastAPI/auth/: dependencies.py  utils.py  views.py
Backend/FastAPI/core/: settings.py
Backend/FastAPI/db/: crud.py  database.py  models.py  plantique.db  schemas.py
Backend/FastAPI/payment/: views.py
Backend/alembic/: env.py
Backend/alembic/versions/: 2024_04_04_2013-aef88d8ed2f5_create_plants_table.py  2024_04_04_2045-2d03cf30766a_create_users_table.py  2024_04_04_2230-a2b67ab7465a_created_categories_table.py  2024_04_04_2301-c8d6a12bc20f_created_collections_table.py  2024_04_05_2320-433f4da1cfed_create_profiles_table.py  2024_04_05_2331-ce679ccf6933_create_carts_table.py  2024_04_05_2338-544fe3fd3872_create_orders_table.py  2024_04_07_1722-95156a7b4dc9_created_plant_category_association_table.py  2024_04_07_1843-ed86cd978786_added_many_to_one_relation_from_.py  2024_04_07_1915-e610d270025a_created_cart_plant_association.py  2024_04_07_1925-2fa5467baf01_added_unique_constraint_to_cart_plant_.py  2024_04_07_1925-498bf7c81881_created_order_plant_association.py  2024_04_07_1948-94a27a06ef82_altered_users_id_columns_with_foreign_.py  2024_04_07_1954-4a21baa68558_deleted_foreign_key_pointing_to_cart_.py  2024_04_07_2311-d9648beeae6b_created_cascade_deletion_rules_for_.py  (+8 more)
(+130 files in other folders)
