[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Pavel Bocharov <skidyschggwp@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.1"
PyJWT = "^2.8.0"
uvicorn = {extras = ["standart"], version = "^0.29.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
